src/test/deca/etapeB/invalid/identifier_notdeclared.res
./src/test/deca/etapeB/invalid/identifier_notdeclared.deca:7:0: variable not declared 
